# context-recon-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  config.yaml  pyproject.toml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
scripts/: audit_release.sh  install_system.sh
src/: browser_cookies.py  cli_reranker.py  excerpts.py  gemini.py  indexer.py  provider_usage.py  reranker.py  search.py  server.py  ui.py
src/tools/: __init__.py  code_search.py  context_recon.py  file_slice.py  index_inspection.py  project_overview.py  relevant_code.py
src/utils/: __init__.py  hashing.py  ignore.py  json_schema.py  rationale.py
tests/: test_gemini.py  test_ignore.py  test_indexer.py  test_server.py  test_tools.py
ui/: index.html
